Updated the script which will update the TE_BASE path into setenv.bat file